[package]
name = "amethyst_start"
version = "0.1.0"
authors = ["Rafael <rafael.s.costa96@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amethyst = "0.13.2"

[features]
default = ["vulkan"]
vulkan = ["amethyst/vulkan"]